Add mdl and update user displayName

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+		<link rel="stylesheet" href="style.css" >
+		<!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
+		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
 		<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
 		<script defer src="js/config.js"></script>
 		<script defer src="js/session.js"></script>
@@ -15,19 +17,35 @@
 	</head>
 	<body>
 
-		<div id="login">
-			<h1>Anonymous Login</h1>
-			<ul>
-				<li>
-					<a id="btnLogin" href="#">Login Anonymously</a>
-				</li>
-				<li>
-					<a id="btnLogout" href="#" class="hide">Logout</a>
-				</li>
-			</ul>
+	<div class="mdl-grid">
+  		<div class="mdl-cell mdl-cell--4-col"></div>
+  		<div class="mdl-cell mdl-cell--4-col">
+			<div id="login">
+				<h1>Spinach Demo</h1>
+				<ul>
+					<li>
+						<form action="#">
+							<div class="mdl-textfield mdl-js-textfield">
+								<input class="mdl-textfield__input" type="text" id="displayName">
+								<label class="mdl-textfield__label" for="displayName">Display Name</label>
+							</div>
+						</form>
+					</li>
+					<li>
+						<button id="btnCreate" href="#" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Create</button>
+					</li>
+					<li>
+						<button id="btnJoin" href="#" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Join</button>
+					</li>
+					<li>
+						<button id="btnEnd" href="#" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">End Game</button>
+					</li>
+				</ul>
+			</div>
+
 		</div>
-
-
+  		<div class="mdl-cell mdl-cell--4-col"></div>
+	</div>
 
 
 	</body>
